<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022"
            app:layout_constraintHorizontal_bias="0.047"/>

    <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintStart_toEndOf="@id/tvLanguage"
            app:layout_constraintTop_toTopOf="@id/tvLanguage"
            app:layout_constraintBottom_toBottomOf="@id/tvLanguage"/>

    <TextView
            android:id="@+id/tvCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="@id/tvLanguage"
            app:layout_constraintTop_toBottomOf="@id/tvLanguage"/>

    <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintStart_toEndOf="@id/tvCountry"
            app:layout_constraintTop_toTopOf="@id/tvCountry"
            app:layout_constraintBottom_toBottomOf="@id/tvCountry"/>

    <TextView
            android:id="@+id/ms1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_should_show_ar_string"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvCountry"
            app:layout_constraintLeft_toLeftOf="@id/tvCountry"/>

    <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_string_1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/ms1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/ms2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_should_show_es_string"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv1"
            app:layout_constraintLeft_toLeftOf="@id/tvCountry"/>

    <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_string_2"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/ms2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/ms3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_should_show_next_children_of_es"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv2"
            app:layout_constraintLeft_toLeftOf="@id/tvCountry"/>

    <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_string_3"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/ms3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/ms4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_should_show_default_string"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv3"
            app:layout_constraintLeft_toLeftOf="@id/tvCountry"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_string_4"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/ms4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_is_happening_first_line_gets_string_that_is_present_in_all_resource_files_second_line_gets_string_that_is_in_all_files_except_ar_third_line_gets_string_from_all_files_except_es_and_ar_fourth_line_gets_string_from_default_only"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/ms4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>